# ssd-cache

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  DEVELOPERS.md  LICENSE  README.md
.github/workflows/: tests.yml
config/: config.ini.sample
docs/: 01. General design.txt  02. deep-research-report.md  03. install-driver-in-test-mode.md
scripts/: build-driver-direct.ps1  build.ps1  get-driver-state.ps1  get-health.ps1  get-service-state.ps1  install-driver.ps1  install-tools.ps1  install-vs-wdk-component-elevated.ps1  install-vs-wdk-component.ps1  open-log.ps1  package.ps1  rebuild-driver.ps1  ssd-cache.ps1  start-driver.ps1  start-service.ps1  stop-driver.ps1  stop-service.ps1  verify-tools.ps1
src/app/: tray_main.cpp
src/core/: access_event.cpp  cache_eviction.cpp  cache_index.cpp  config.cpp  job_scheduler.cpp  mode_manager.cpp  path_mapper.cpp  time.cpp  utf.cpp
src/core/include/ssd_cache/: access_event.h  cache_eviction.h  cache_index.h  config.h  copy_engine.h  interfaces.h  job_scheduler.h  logger.h  mode_manager.h  path_mapper.h  time.h  utf.h
src/driver/: cachemon.inf  cachemon_minifilter.vcxproj
src/driver/src/: driver.c
src/platform/win/: win_config_paths.cpp  win_file_copy.cpp  win_file_logger.cpp  win_filter_activity_source.cpp  win_mount_manager.cpp  win_service_controller.cpp  win_service_host.cpp
src/platform/win/include/ssd_cache/: win_config_paths.h  win_file_copy.h  win_file_logger.h  win_filter_activity_source.h  win_mount_manager.h  win_service_controller.h  win_service_host.h
src/service/: service_main.cpp
src/shared/: cachemon_messages.h
tests/: test_macros.h  test_main.cpp
tests/core/: cache_eviction_test.cpp  cache_index_test.cpp  config_test.cpp  job_scheduler_test.cpp  path_mapper_test.cpp
